--- a/nginx-mpcpct.conf
+++ b/nginx-mpcpct.conf
@@ -103,9 +103,16 @@ server {
         access_log off;
     }
 
-    # Static Files - Images, fonts, etc. from public folder
+    # Static Files - Images from public/uploads folder
+    # These should be proxied to Next.js which serves public/ folder
     location /uploads/ {
-        alias /var/www/mpcpct/public/uploads/;
+        proxy_pass http://localhost:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
         expires 30d;
         add_header Cache-Control "public";
         access_log off;
