--- a/env.example
+++ b/env.example
@@ -6,6 +6,7 @@ JWT_SECRET=your-super-secret-jwt-key-here
 
 # Site Configuration
 NEXT_PUBLIC_SITE_URL=https://yourdomain.com
+NEXT_PUBLIC_BASE_URL=https://mpcpct.com
 NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
 
 # Email Configuration (SMTP)
