--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "15.3.3",
     "next-sitemap": "^4.2.3",
     "nodemailer": "^6.9.8",
+    "pdf-parse": "^2.4.5",
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
